[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/UI/alert_background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Battle/BattleScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Inventory/inventory_selectcursor1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Battle/SkillChoice.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Battle/BattleSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://Animations/Battle/BattleLose1Enemy.tres" type="Animation" id=6]
[ext_resource path="res://Animations/Battle/BattleLose1Player.tres" type="Animation" id=7]
[ext_resource path="res://Animations/Battle/BattleRESET.tres" type="Animation" id=8]
[ext_resource path="res://Animations/Battle/1v1SceneSetup.tres" type="Animation" id=9]
[ext_resource path="res://Animations/Battle/1v1Elite.tres" type="Animation" id=10]
[ext_resource path="res://Scenes/Battle/UI_Bars.tscn" type="PackedScene" id=11]
[ext_resource path="res://Animations/OverworldBattleIn.tres" type="Animation" id=12]
[ext_resource path="res://Animations/OverworldBattleOut.tres" type="Animation" id=13]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="BattleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 270.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyGraphics" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemySpriteBack" parent="EnemyGraphics" instance=ExtResource( 5 )]
visible = false
rect_scale = Vector2( 0.5, 0.5 )

[node name="EnemySpriteFront" parent="EnemyGraphics" instance=ExtResource( 5 )]
margin_left = 270.0
margin_top = 26.0
margin_right = 510.0
margin_bottom = 266.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )

[node name="EnemyBackingBack" type="TextureRect" parent="EnemyGraphics"]
visible = false
margin_left = 314.0
margin_top = -1.0
margin_right = 481.0
margin_bottom = 44.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyName" type="Label" parent="EnemyGraphics/EnemyBackingBack"]
margin_right = 207.0
margin_bottom = 34.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "VOID_GOLEM_NAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSelection" type="TextureRect" parent="EnemyGraphics/EnemyBackingBack"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 166.0
margin_top = 1.0
margin_right = 174.0
margin_bottom = 166.0
rect_rotation = 90.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_Bars" parent="EnemyGraphics/EnemyBackingBack" instance=ExtResource( 11 )]
margin_left = 7.0
margin_top = 19.0
margin_right = 8.92003
margin_bottom = 18.99
rect_scale = Vector2( 0.75, 0.75 )

[node name="EnemyBackingFront" type="TextureRect" parent="EnemyGraphics"]
margin_left = 328.0
margin_top = 44.0
margin_right = 495.0
margin_bottom = 94.0
rect_pivot_offset = Vector2( -533, 8 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyName" type="Label" parent="EnemyGraphics/EnemyBackingFront"]
margin_right = 207.0
margin_bottom = 34.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "VOID_GOLEM_NAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSelection" type="TextureRect" parent="EnemyGraphics/EnemyBackingFront"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 165.0
margin_top = 1.0
margin_right = 173.0
margin_bottom = 166.0
rect_rotation = 90.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_Bars" parent="EnemyGraphics/EnemyBackingFront" instance=ExtResource( 11 )]
margin_left = 3.0
margin_top = 21.0
margin_right = 4.92
margin_bottom = 20.99
rect_scale = Vector2( 0.75, 0.75 )

[node name="PlayerGraphics" type="Control" parent="."]
margin_left = 330.0
margin_top = 26.0
margin_right = 370.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSpriteFront" parent="PlayerGraphics" instance=ExtResource( 5 )]
margin_left = -300.0
margin_top = -10.0
margin_right = -60.0
margin_bottom = 230.0
rect_scale = Vector2( 0.6, 0.6 )
isPlayerSprite = true

[node name="PlayerSpriteBack" parent="PlayerGraphics" instance=ExtResource( 5 )]
visible = false
rect_scale = Vector2( 0.6, 0.6 )
isPlayerSprite = true

[node name="PlayerBackingBack" type="TextureRect" parent="PlayerGraphics"]
visible = false
margin_left = -335.0
margin_top = 112.0
margin_right = -191.0
margin_bottom = 167.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="PlayerGraphics/PlayerBackingBack"]
margin_left = 5.0
margin_top = 4.0
margin_right = 179.0
margin_bottom = 70.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAYER_GOLEM_NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSelection" type="TextureRect" parent="PlayerGraphics/PlayerBackingBack"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 142.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 152.0
rect_rotation = 90.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_Bars" parent="PlayerGraphics/PlayerBackingBack" instance=ExtResource( 11 )]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -15.5
margin_right = -10.0
margin_bottom = -15.5
grow_horizontal = 2
rect_scale = Vector2( 0.75, 0.75 )
isPlayer = true

[node name="PlayerBackingFront" type="TextureRect" parent="PlayerGraphics"]
margin_left = -334.0
margin_top = 163.0
margin_right = -151.0
margin_bottom = 233.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="PlayerGraphics/PlayerBackingFront"]
margin_top = 7.0
margin_right = 229.0
margin_bottom = 87.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAYER_GOLEM_NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSelection" type="TextureRect" parent="PlayerGraphics/PlayerBackingFront"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 180.0
margin_top = 17.0
margin_right = 188.0
margin_bottom = 198.0
rect_rotation = 90.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_Bars" parent="PlayerGraphics/PlayerBackingFront" instance=ExtResource( 11 )]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -14.0
margin_right = 7.0
margin_bottom = -14.0
grow_horizontal = 2
rect_scale = Vector2( 0.75, 0.75 )
isPlayer = true

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerSkills" type="HBoxContainer" parent="UI"]
margin_left = 352.0
margin_top = 151.0
margin_right = 454.0
margin_bottom = 175.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBacking" type="TextureRect" parent="UI/PlayerSkills"]
margin_left = 50.0
margin_right = 74.0
margin_bottom = 24.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="UI/PlayerSkills/PlayerBacking"]
margin_right = 24.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBacking2" type="TextureRect" parent="UI/PlayerSkills"]
margin_left = 78.0
margin_right = 102.0
margin_bottom = 24.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="UI/PlayerSkills/PlayerBacking2"]
margin_right = 24.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 352.0
margin_top = 140.0
margin_right = 454.0
margin_bottom = 241.0
custom_constants/separation = 21
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuItem1" parent="UI/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_right = 102.0
margin_bottom = 38.0
grow_horizontal = 0
grow_vertical = 0

[node name="MenuItem2" parent="UI/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 59.0
margin_right = 102.0
margin_bottom = 59.0
grow_horizontal = 0
grow_vertical = 0

[node name="MenuItem3" parent="UI/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 102.0
margin_bottom = 80.0
grow_horizontal = 0
grow_vertical = 0

[node name="MenuItem4" parent="UI/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 101.0
margin_right = 102.0
margin_bottom = 101.0
grow_horizontal = 0
grow_vertical = 0

[node name="UIChoices" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 268.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerSkills" type="HBoxContainer" parent="UIChoices"]
margin_left = 393.0
margin_top = 151.0
margin_right = 438.0
margin_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 21
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerChoice1" type="TextureRect" parent="UIChoices/PlayerSkills"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 5.0
margin_right = 12.0
margin_bottom = 24.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="PlayerChoice2" type="TextureRect" parent="UIChoices/PlayerSkills"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 33.0
margin_right = 40.0
margin_bottom = 24.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Options" type="VBoxContainer" parent="UIChoices"]
margin_left = 350.0
margin_top = 183.0
margin_right = 452.0
margin_bottom = 284.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerChoice3" type="TextureRect" parent="UIChoices/Options"]
margin_right = 102.0
margin_bottom = 9.0
texture = ExtResource( 3 )

[node name="PlayerChoice4" type="TextureRect" parent="UIChoices/Options"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 21.0
margin_right = 102.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="PlayerChoice5" type="TextureRect" parent="UIChoices/Options"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 42.0
margin_right = 102.0
margin_bottom = 51.0
texture = ExtResource( 3 )

[node name="PlayerChoice6" type="TextureRect" parent="UIChoices/Options"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 63.0
margin_right = 102.0
margin_bottom = 72.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUpWindows" type="Control" parent="."]
margin_left = 117.0
margin_top = 33.0
margin_right = 240.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopUpWindows"]
margin_right = 164.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="TextureRect" parent="PopUpWindows/MarginContainer"]
margin_right = 164.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( -533, 8 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PromptText" type="Label" parent="PopUpWindows/MarginContainer/Prompt"]
margin_right = 207.0
margin_bottom = 34.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PromptTween" type="Tween" parent="PopUpWindows/MarginContainer/Prompt"]

[node name="BattleWin" type="TextureRect" parent="PopUpWindows"]
visible = false
margin_right = 234.0
margin_bottom = 200.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="PopUpWindows/BattleWin"]
margin_right = 233.0
margin_bottom = 200.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You Won:
"

[node name="SceneSetup" type="AnimationPlayer" parent="."]
root_node = NodePath("../EnemyGraphics")
reset_on_save = false
anims/1v1 = ExtResource( 9 )
anims/Elite = ExtResource( 10 )
anims/Lose1Enemy = ExtResource( 6 )
anims/Lose1Player = ExtResource( 7 )
anims/RESET = ExtResource( 8 )

[node name="PlayerSelection" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 282.0
margin_top = 34.0
margin_right = 290.0
margin_bottom = 199.0
rect_rotation = 90.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneLoadInAndOut" type="AnimationPlayer" parent="."]
anims/OverworldBattleIn = ExtResource( 12 )
anims/OverworldBattleOut = ExtResource( 13 )
anims/RESET = SubResource( 1 )

[connection signal="animation_finished" from="SceneLoadInAndOut" to="." method="_on_SceneLoadInAndOut_animation_finished"]
